fixes hidden overflow for off-canvas nav

--- a/source/scss/blocks/_desktop-menu.scss
+++ b/source/scss/blocks/_desktop-menu.scss
@@ -74,7 +74,6 @@
   position: absolute;
   top:0;
   margin-top: 80px;
-  bottom: 0;
   width: $desktop-menu-width;
   transition: all 150ms ease-in-out;
 
